--- a/appangular/src/index.html
+++ b/appangular/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>App</title>
+  <title>App AndyApps</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root><p>Olá</p></app-root>
+  <p></p>
+  <h1>Título h 1 </h1>
 </body>
 </html>
